# Inertia

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Todo.md  pyproject.toml
.cursor/plans/: physicslang_hub_plan.plan.md
.cursor/rules/: physicslang-project.mdc
.github/workflows/: ci.yml
apps/ide/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/ide/scripts/: gen-icons.py
apps/ide/src/: colormap.ts  field-viewer.ts  lsp.ts  main.ts  molecule-viewer.ts  notebook.ts  physlang-monarch.ts  plot-viewer.ts  structure-editor.ts  styles.css  wgpu-viewer.ts  zmatrix-editor.ts
apps/ide/src-tauri/: Cargo.toml  tauri.conf.json
apps/ide/src-tauri/capabilities/: default.json
apps/ide/src-tauri/icons/: icon.icns
apps/ide/src-tauri/src/: chem_jobs.rs  lib.rs  main.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
docs/: AGENT-HANDOFF.md  README.md  architecture.md  language-reference.md  quickstart.md  stdlib-reference.md
examples/: hello.phys
examples/demo/: SMOKE-TEST.md  getting_started.inb  lsp_demo.phys  notebook_demo.phys  smoke-test.ps1
examples/fields/: demo_gaussian.field.json
examples/math/: extern_daxpy.phys  validate_phase2.py
examples/molecules/: water.fchk  water.gjf  water.xyz  water_density.cube  water_sto3g.fchk  water_zmat.gjf
examples/quantum/: benchmark.py  grover.phys  h2_vqe.phys  qaoa_maxcut.phys  qiskit_ffi.phys  validate_h2.py
extensions/vscode-physlang/: language-configuration.json  package.json
extensions/vscode-physlang/src/: extension.ts
extensions/vscode-physlang/syntaxes/: physlang.tmLanguage.json
legacy/c/: legacy_math.c
legacy/fortran/: daxpy.f90
physlang/physlang-atom/: Cargo.toml
physlang/physlang-atom/src/: element.rs  lib.rs  molecule.rs
physlang/physlang-cli/: Cargo.toml
physlang/physlang-cli/src/: main.rs
physlang/physlang-interop/: Cargo.toml  build.rs
physlang/physlang-interop/src/: lib.rs
physlang/physlang-llvm/: Cargo.toml
physlang/physlang-llvm/src/: lib.rs
physlang/physlang-lsp/: Cargo.toml
physlang/physlang-lsp/src/: code_actions.rs  completion.rs  diagnostics.rs  hover.rs  lib.rs  stdlib.rs  stdlib_docs.rs  symbols.rs
physlang/physlang-math/: Cargo.toml
physlang/physlang-math/benches/: matmul.rs
physlang/physlang-math/src/: calc.rs  fft.rs  kernel.rs  lib.rs  linalg.rs  sparse.rs  tensor.rs
physlang/physlang-mir/: Cargo.toml
physlang/physlang-mir/src/: autodiff.rs  lib.rs  lower.rs
physlang/physlang-parser/: Cargo.toml
physlang/physlang-parser/grammar/: grammar.js
physlang/physlang-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parse.rs
physlang/physlang-quantum/: Cargo.toml
physlang/physlang-quantum/src/: circuit.rs  lib.rs  runtime.rs
physlang/physlang-runtime/: Cargo.toml
physlang/physlang-runtime/src/: exec.rs  lib.rs  value.rs
physlang/physlang-sim/: Cargo.toml
physlang/physlang-sim/src/: continuum.rs  em.rs  lib.rs  montecarlo.rs  particle.rs  traits.rs
physlang/physlang-types/: Cargo.toml
physlang/physlang-types/src/: check.rs  lib.rs  units.rs
physlang/physlang-viz/: Cargo.toml
physlang/physlang-viz/src/: camera.rs  circuit_svg.rs  cube.rs  elements.rs  fchk.rs  fchk_basis.rs  fchk_grid.rs  field_slice.rs  gaussian_log.rs  gjf.rs  lib.rs  marching_cubes.rs  marching_cubes_tables.rs  marching_cubes_tri.inc  pdb.rs  pick.rs  plots.rs  tests.rs  vibration.rs  viewer3d.rs  volume.rs  vtk.rs
physlang/physlang-viz/src/wgpu_render/: device.rs  field.rs  mod.rs  molecule.rs  volume_gpu.rs
python/physlang/: __init__.py  _native.cp313-win_amd64.pyd  interop.py  math.py  quantum.py  symbolic.py
scripts/: gen-stdlib-docs.ps1
stdlib/: atom.phys  constants.phys  core.phys  math.phys  quantum.phys
