[workspace]
resolver = "2"
members = [
    "physlang/physlang-parser",
    "physlang/physlang-types",
    "physlang/physlang-mir",
    "physlang/physlang-runtime",
    "physlang/physlang-quantum",
    "physlang/physlang-math",
    "physlang/physlang-sim",
    "physlang/physlang-interop",
    "physlang/physlang-llvm",
    "physlang/physlang-lsp",
    "physlang/physlang-viz",
    "physlang/physlang-atom",
    "physlang/physlang-cli",
    "bindings/python",
    "apps/ide/src-tauri",
]
default-members = ["physlang/physlang-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/physlang/inertia"

[workspace.dependencies]
physlang-parser = { path = "physlang/physlang-parser" }
physlang-types = { path = "physlang/physlang-types" }
physlang-mir = { path = "physlang/physlang-mir" }
physlang-runtime = { path = "physlang/physlang-runtime" }
physlang-quantum = { path = "physlang/physlang-quantum" }
physlang-math = { path = "physlang/physlang-math" }
physlang-sim = { path = "physlang/physlang-sim" }
physlang-interop = { path = "physlang/physlang-interop" }
physlang-llvm = { path = "physlang/physlang-llvm" }
physlang-lsp = { path = "physlang/physlang-lsp" }
physlang-viz = { path = "physlang/physlang-viz" }
physlang-atom = { path = "physlang/physlang-atom" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indexmap = "2"
