[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "physlang"
version = "0.1.0"
description = "PhysicsLang — all-in-one physics programming language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
keywords = ["physics", "quantum", "compiler", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
quantum = ["qiskit>=1.0", "qiskit-aer>=0.13", "pennylane>=0.35", "scipy>=1.10"]
symbolic = ["sympy>=1.12"]
math = ["numpy>=1.24"]
viz = ["matplotlib>=3.7"]
dev = ["maturin>=1.4", "pytest>=7.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "physlang._native"
manifest-path = "bindings/python/Cargo.toml"
python-source = "python"
