[package]
name = "physlang-atom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PhysicsAtom — periodic table, molecules, force fields (Phase 3)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
