[package]
name = "physlang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PhysicsLang CLI (phys)"

[[bin]]
name = "phys"
path = "src/main.rs"

[dependencies]
physlang-parser.workspace = true
physlang-types.workspace = true
physlang-mir.workspace = true
physlang-runtime.workspace = true
physlang-quantum.workspace = true
physlang-llvm.workspace = true
physlang-lsp.workspace = true
physlang-viz.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[features]
default = []
llvm = []
