[package]
name = "physlang-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PhysicsLang Language Server Protocol implementation"

[dependencies]
physlang-parser.workspace = true
physlang-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
