[package]
name = "physlang-quantum"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PhysicsLang quantum circuit IR and runtime"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
