[package]
name = "physlang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PhysicsLang interpreter runtime and PhysicsMath stubs"

[dependencies]
physlang-parser.workspace = true
physlang-mir.workspace = true
physlang-types.workspace = true
physlang-quantum.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
