[package]
name = "physlang-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PhysicsLang type checker and SI unit system"

[dependencies]
physlang-parser.workspace = true
thiserror.workspace = true
serde.workspace = true
indexmap.workspace = true

[dev-dependencies]
